[gd_scene load_steps=4 format=3 uid="uid://butynrew6ycx7"]

[ext_resource type="Script" path="res://src/parts/ShadedLabel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cbrffdxe8yc8v" path="res://assets/ui/rectangle.png" id="3"]
[ext_resource type="FontVariation" uid="uid://dah6hd1bjc1ge" path="res://assets/fonts/Small_Variation.tres" id="3_6d2h7"]

[node name="ShadedLabel" type="Node2D"]
z_index = 1
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.278431)
z_index = -1
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 30, 13)

[node name="Label" type="Label" parent="."]
offset_right = 30.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("3_6d2h7")
text = "123"
horizontal_alignment = 2

[node name="zfix" type="Node2D" parent="Label"]
z_index = -1

[node name="LabelShadowR" type="Label" parent="Label/zfix"]
modulate = Color(0, 0, 0, 1)
offset_left = 1.0
offset_right = 31.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("3_6d2h7")
text = "123"
horizontal_alignment = 2

[node name="LabelShadowL" type="Label" parent="Label/zfix"]
modulate = Color(0, 0, 0, 1)
offset_left = -1.0
offset_right = 29.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("3_6d2h7")
text = "123"
horizontal_alignment = 2

[node name="LabelShadowD" type="Label" parent="Label/zfix"]
modulate = Color(0, 0, 0, 1)
offset_top = 1.0
offset_right = 30.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("3_6d2h7")
text = "123"
horizontal_alignment = 2

[node name="LabelShadowU" type="Label" parent="Label/zfix"]
modulate = Color(0, 0, 0, 1)
offset_top = -1.0
offset_right = 30.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("3_6d2h7")
text = "123"
horizontal_alignment = 2
